Separate generation and scoring

--- a/ImagenHub/benchmark_cfg/ih_t2i.yml
+++ b/ImagenHub/benchmark_cfg/ih_t2i.yml
@@ -21,7 +21,10 @@ info:
       "SDXLTurbo",
       "UniDiffuser",
       "SSD",
-      "PlayGroundV2"
+      "PlayGroundV2",
+      "StableCascade",
+      "SDXLLightning",
+      "Wuerstchen"
     ] # Determine which model to run
 params:
   limit_images_amount: null # Run only certain amount of images. null means running all of them
